# LinuxFN

./: replits.txt
LinuxFNLauncher/: EclipticLauncher.sln
LinuxFNLauncher/EclipticLauncher/: EclipticLauncher.csproj  EclipticLauncher_ProcessedByFody.cs  Form1.Designer.cs  Form1.cs  Form1.resources  Form2.Designer.cs  Form2.cs  Form2.resources  Program.cs  option.Designer.cs  option.cs  option.resources
LinuxFNLauncher/EclipticLauncher/Costura/: AssemblyLoader.cs  metadata
LinuxFNLauncher/EclipticLauncher/DiscordRpcDemo/: DiscordRpc.cs
s13backend/: fortnite-game.js  main.py  news.json  pyproject.toml  requirements.txt  shop.json
s13backend/config/: Default.json
s13backend/config/s/: settings.json
s13backend/files/2a8f1871e3154e53ad49f4dbff6c2fae/: settings.json
s13backend/files/cache/: bearer.json
s13backend/files/cloudstorage/: DefaultGame.ini  Quests files.ini
s13backend/files/profiles/2d76b897c0c045969be33871d27a6c96/: settings.json
s13backend/files/profiles/73364f32c9e0480389dfe0df6c3a2754/: settings.json
s13backend/files/workers/: api.py  fortnite.py  matchmaking.py  mcp.py  profile.py
s13backend/files/workers/profiles/6c0c0a866be84351a4c4f8df241e8fd9/: settings.json
s13backend/files/workers/profiles/bb069b02c99444399f0c3ae712f12858/: settings.json
s13backend/files/workers/profiles/da45962d7d4d4bad8467860db63bbf9e/: settings.json
s13backend/files/workers/profiles/e8ff06ae233845519b3034d423137493/: settings.json
s13backend/files/workers/profiles/f1375842565b4cfe8036794f3751e388/: settings.json
(+10 files in other folders)
