[tool.poetry]
name = "plushsereneinstances"
version = "0.1.0"
description = "pip install -r requirements.txt ; python main.py"
authors = ["idk who"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^21.6.0"
sanic-ipware = "^0.1.0"
replit = "^3.1.0"
sanic-useragent = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
